<resources>
    <string name="app_name">MyChatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="enteruserid">Enter User ID</string>
    <string name="roomname">Room name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="theme">Theme</string>
    <string name="send">SEND</string>
    <string name="sendmessage">Send message</string>
    <string name="myprofile">My Profile</string>
    <string name="design">Design</string>
    <string name="settings">Settings</string>
    <string name="misc">Misc</string>
    <string name="changelog">Changelog</string>
    <string name="aboutus">About us</string>
    <string name="background">Background</string>
    <string name="messagecopied">Message copied</string>
    <string name="download">Download</string>
    <string name="createroom">Create room</string>
    <string name="pleaseenterpassword">Please enter password</string>
    <string name="changedesign">Change design</string>
    <string name="settingssaved">Settings saved</string>
    <string name="wrongpassword">Wrong password</string>
    <string name="pleaseenteruserid">Enter User ID</string>
    <string name="roomcreated">Room created</string>
    <string name="passwordsdontmatch">Passwords don\'t match</string>
    <string name="enterroomname">Enter room name</string>
    <string name="selectcategory">Select category</string>
    <string name="imageuploaded">Image uploaded</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="copy">Copy</string>
    <string name="quote">Quote</string>
    <string name="jumptoquotedimage">Jump to quoted image</string>
    <string name="imagesaved">Image saved</string>
    <string name="savingimagefailed">Saving image failed</string>
    <string name="nodatabaseconnection">No database connection</string>
    <string name="quotedmessagenolongeravailable">Quoted message no longer available</string>
    <string name="roominfo">Room info</string>
    <string name="category">Category</string>
    <string name="admin">Admin</string>
    <string name="foundation">Foundation</string>
    <string name="sentmessages">Sent Messages</string>
    <string name="upload">Upload&#8230;</string>
    <string name="enterpassword">Enter password</string>
    <string name="editprofile">Edit profile</string>
    <string name="createprofile">Create profile</string>
    <string name="messagesaved">Message saved</string>
    <string name="receivepushnotifications">Receive push notifications</string>
    <string name="saveenteredmessage">Save entered message when closing room</string>
    <string name="roomalreadyexists">Room already exists</string>
    <string name="noroomfound">No room found</string>
    <string name="favorite">Favorite</string>
    <string name="searchmessage">Search message</string>
    <string name="images">Images</string>
    <string name="pinboard">Pinboard</string>
    <string name="backup">Backup</string>
    <string name="backupcreated">Backup created</string>
    <string name="open">OPEN</string>
    <string name="roomintro">Room created on %s by %s</string>
    <string name="sharedapicture">shared a picture</string>
    <string name="uploaded">uploaded</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="birth">Date of birth</string>
    <string name="favoritecolor">Favorite color</string>
    <string name="aboutme">About me</string>
    <string name="incompletedata">Incomplete data</string>
    <string name="chooseacolor">Choose a color</string>
    <string name="myrooms">My Rooms</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="addedtofavorites">Added to favorites</string>
    <string name="removedfromfavorites">Removed from favorites</string>
    <string name="showprofile">Show profile</string>
    <string name="profile">%s\'s Profile</string>
    <string name="nomessagesfound">No messages found</string>
    <string name="profileedited">Profile edited</string>
    <string name="profilecreated">Profile created</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="nomessagefound">No message found</string>
    <string name="forwarded">Forwarded</string>
    <string name="forward">Forward</string>
    <string name="forwardmessage">Forward message</string>
    <string name="messageforwarded">Message forwarded</string>
    <string name="selectanoption">Select an option</string>
    <string name="roomdescription">Description</string>
    <string name="backupof">Backup of</string>
    <string name="createdon">Created</string>
    <string name="imageforwarded">Image forwarded</string>
    <string name="successfullyloggedout">Successfully logged out</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="entername">Enter name</string>
    <string name="enterbio">Enter bio</string>
    <string name="enterlocation">Enter location</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="unfavorite">Remove favorite</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="messagepinned">Message pinned</string>
    <string name="messageunpinned">Message unpinned</string>
    <string name="imagepinned">Image pinned</string>
    <string name="imageunpinned">Image unpinned</string>
    <string name="noimagesfound">No images found</string>
    <string name="nopinnedmessagesfound">No pinned messages found</string>
    <string name="editroom">Edit room</string>
    <string name="roomedited">Room edited</string>
    <string name="roommuted">Room muted</string>
    <string name="roomunmuted">Room unmuted</string>
    <string name="members">Members</string>
    <string name="showmore">Show more</string>
    <string name="showless">Show less</string>
    <string name="yousharedapicture">You shared a picture</string>
    <string name="you">You</string>
    <string name="youcreatedthisroom">You created this room</string>
    <string name="createdthisroom">created this room</string>
    <string name="unreadmessages">Unread messages</string>
    <string name="searchroom">Search room</string>
    <string name="profileimage">Profile image</string>
    <string name="profilebanner">Profile banner</string>
    <string name="leaveroom">Leave room</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reallyleaveroom">Really leave room?</string>
    <string name="roomleft">Room left</string>
    <string name="previewimages">Preview images</string>
    <string name="savecamerapictures">Save camera pictures on device</string>
    <string name="reply">Reply</string>
    <string name="markasread">Mark as read</string>
    <string name="messagesent">Message sent</string>
    <string name="roomimage">Room image</string>
    <string name="login">Login</string>
    <string name="email">E-Mail address</string>
    <string name="enteremail">Enter E-Mail address</string>
    <string name="loginfailed">Login failed</string>
    <string name="createnewaccount">Create new account</string>
    <string name="passwordmustcontainatleastsixcharacters">Password must contain at least 6 characters</string>
    <string name="pleaseverifyemail">Please verify E-Mail address</string>
    <string name="resendverificationmail">Resend verification mail</string>
    <string name="profilecreationfailed">Profile creation failed</string>
    <string name="verificationmailsent">Verification mail sent</string>
    <string name="unknownuser">Unknown User</string>
    <string name="unknown">Unknown</string>
    <string name="illegalinput">Illegal input</string>
    <string name="delete_account">Delete account</string>
    <string name="account_successfully_deleted">Account successfully deleted</string>
    <string name="account_deletion_info">CAUTION: You are about to delete your account. This action cannot be reverted! If you really want to delete your account, please enter your password to proceed.</string>
    <string name="email_verification_info">You have to verify your E-Mail address before you can use your account. If you have not received a mail, click the resend button. If you have verified your mail, you can close this window and proceed with login.</string>
    <string name="delete_room"><font color='#FF0000'>Delete room</font></string>
    <string name="delete_room_header">Delete room</string>
    <string name="room_successfully_deleted">Room successfully deleted</string>
    <string name="room_deletion_info">Do you really want to delete this room?</string>
    <string name="invalid_email">Invalid E-Mail address</string>
    <string name="delete_message"><font color='#FF0000'>Delete message</font></string>
    <string name="really_delete_message">Really delete message?</string>
    <string name="message_deleted">Message deleted</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_reset_mail_sent">Sent mail to reset password</string>
    <string name="hint_email">E-Mail Address <font color='#FF0000'>*</font></string>
    <string name="hint_name">Name <font color='#FF0000'>*</font></string>
    <string name="hint_location">Location <font color='#FF0000'>*</font></string>
    <string name="hint_birthday">Birthday <font color='#FF0000'>*</font></string>
    <string name="hint_room_name">Room name <font color='#FF0000'>*</font></string>
    <string name="hint_password">Password <font color='#FF0000'>*</font></string>
    <string name="hint_confirm_password">Confirm password <font color='#FF0000'>*</font></string>
    <string-array name="categories">
        <item>Select category <font color='#FF0000'>*</font></item>
        <item>Study &amp; Work</item>
        <item>Gaming</item>
        <item>Politics</item>
        <item>Geography</item>
        <item>Languages</item>
        <item>Literature</item>
        <item>Technics</item>
        <item>TV</item>
        <item>Sports</item>
        <item>Culture &amp; Art</item>
        <item>Music</item>
        <item>Misc</item>
    </string-array>
    <string-array name="themes">
        <item>Standard</item>
        <item>Dark</item>
    </string-array>
    <string-array name="backgrounds">
        <item>Standard</item>
        <item>Breath of the Wild</item>
        <item>Splatoon 2</item>
        <item>Persona 5</item>
        <item>Kimi no na wa</item>
        <item>Super Mario Bros.</item>
        <item>Super Mario Maker</item>
        <item>Xenoblade Chronicles 2</item>
        <item>Fire Emblem Fates</item>
        <item>Super Smash Bros. Ultimate</item>
    </string-array>
</resources>