<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_profile"
            android:title="@string/myprofile" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/icon_theme"
            android:title="@string/design" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings" />

    <item android:title="@string/misc" >
        <menu>
            <item
                android:id="@+id/nav_changelog"
                android:icon="@drawable/icon_changelog"
                android:title="@string/changelog" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/icon_copyright"
                android:title="@string/aboutus" />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_leave"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
