<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChatActivity">

    <item
        android:id="@+id/roominfo"
        android:title="@string/roominfo"
        android:icon="@drawable/icon_roominfo"
        app:showAsAction="never" />

    <item
        android:id="@+id/roomfav"
        android:title="@string/favorite"
        android:icon="@drawable/icon_roomfav"
        app:showAsAction="never" />

    <item
        android:id="@+id/roomsearch"
        android:title="@string/searchmessage"
        android:icon="@drawable/icon_roomsearch"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/roomphotos"
        android:title="@string/images"
        android:icon="@drawable/icon_roomphotos"
        app:showAsAction="never" />

    <item
        android:id="@+id/roompinboard"
        android:title="@string/pinboard"
        android:icon="@drawable/icon_roompinboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/roommute"
        android:title="@string/unmute"
        android:icon="@drawable/icon_unmute"
        app:showAsAction="never" />

    <item
        android:id="@+id/roombackup"
        android:title="@string/backup"
        android:icon="@drawable/icon_roombackup"
        app:showAsAction="never" />

    <item
        android:id="@+id/roomleave"
        android:title="@string/leaveroom"
        android:icon="@drawable/icon_leave"
        app:showAsAction="never" />
</menu>