<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ChatActivity" >

    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:icon="@drawable/icon_copy" />

    <item
        android:id="@+id/quote"
        android:title="@string/quote"
        android:icon="@drawable/icon_quote" />

    <item
        android:id="@+id/forward"
        android:title="@string/forward"
        android:icon="@drawable/icon_forward" />

    <item
        android:id="@+id/pin"
        android:title="@string/pin"
        android:icon="@drawable/icon_pin" />

    <item
        android:id="@+id/openprofile"
        android:title="@string/showprofile"
        android:icon="@drawable/icon_showprofile" />

</menu>