<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal" >

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/receivepushnotifications" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/saveenteredmessage" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/previewimages" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/savecamerapictures" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/delete_account" />

</LinearLayout>