<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/room_image"
        android:layout_gravity="center"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:src="@color/lightGrey" />

    <TextView
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/room_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/room_info_padding"
        android:paddingRight="@dimen/room_info_padding" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:text="@string/category"
                android:padding="@dimen/room_info_padding" />

            <TextView
                android:id="@+id/room_cat"
                android:padding="@dimen/room_info_padding" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/foundation"
                android:padding="@dimen/room_info_padding" />

            <TextView
                android:id="@+id/room_creation"
                android:padding="@dimen/room_info_padding" />

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/sentmessages"
                android:padding="@dimen/room_info_padding" />

            <TextView
                android:id="@+id/room_amount_messages"
                android:padding="@dimen/room_info_padding" />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textSize="15sp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="8dp"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" />

    <ListView
        android:id="@+id/memberList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/room_info_padding"
        android:paddingRight="@dimen/room_info_padding" />

</LinearLayout>