<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="40dp"
            android:paddingBottom="40dp">

            <ImageView
                android:id="@+id/imgsplash"
                android:layout_width="90dp"
                android:layout_height="75dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:paddingLeft="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="35dp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false"
            app:errorEnabled="true" >
            <org.droidparts.widget.ClearableEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded"
                android:padding="14dp"
                android:inputType="text"
                android:hint="@string/email"
                android:maxLength="40"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true" >
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded"
                android:padding="14dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:maxLength="16"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:rippleColor="@color/roomhighlight_dark"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            app:rippleColor="@color/roomhighlight_dark"
            android:text="@string/createnewaccount" />

    </LinearLayout>
</ScrollView>