<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/dialog_padding_top"
        android:paddingBottom="@dimen/dialog_padding_top" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/maxProfileNameLength"
            app:errorEnabled="true" >

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:inputType="text|textCapSentences"
                android:hint="@string/hint_name"
                android:maxLength="@integer/maxProfileNameLength"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/maxProfileDescriptionLength"
            app:errorEnabled="true" >

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/user_bio"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:gravity="top"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="6"
                android:hint="@string/aboutme"
                android:maxLength="@integer/maxProfileDescriptionLength"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/user_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:hint="@string/hint_birthday"
                android:focusable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/maxProfileLocationLength"
            app:errorEnabled="true" >

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/user_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_text_padding_top"
                android:inputType="text|textCapSentences"
                android:hint="@string/hint_location"
                android:maxLength="@integer/maxProfileLocationLength"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoritecolor"
                android:paddingRight="10dp"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/user_favcolor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/profileimage"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_image"
                android:layout_width="@dimen/room_list_image_size"
                android:layout_height="@dimen/room_list_image_size"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground"/>

            <ImageButton
                android:id="@+id/user_profile_image_remove"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/profilebanner"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/user_profile_banner"
                android:layout_width="98dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackground" />

            <ImageButton
                android:id="@+id/user_profile_banner_remove"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_clear" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>